syntax = "proto3";

// API Version 1.0 (RN-007: Versionamento de API)
package chat4all.v1;

import "common.proto";

option java_multiple_files = true;
option java_package = "chat4all.grpc.generated.v1";
option java_outer_classname = "GroupsProto";

// Serviço de Grupos/Conversas
service GroupService {
  // Criar novo grupo
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);
  
  // Obter informações do grupo
  rpc GetGroup(GetGroupRequest) returns (GetGroupResponse);
  
  // Listar grupos do usuário
  rpc ListUserGroups(ListUserGroupsRequest) returns (ListUserGroupsResponse);
  
  // Adicionar participante ao grupo
  rpc AddParticipant(AddParticipantRequest) returns (AddParticipantResponse);
  
  // Remover participante do grupo
  rpc RemoveParticipant(RemoveParticipantRequest) returns (RemoveParticipantResponse);
}

message CreateGroupRequest {
  string name = 1;
  repeated string participant_ids = 2;
  string type = 3; // DIRECT ou GROUP
}

message CreateGroupResponse {
  string group_id = 1;
  string name = 2;
  repeated string participant_ids = 3;
  string type = 4;
  int64 created_at = 5;
}

message GetGroupRequest {
  string group_id = 1;
}

message GetGroupResponse {
  string group_id = 1;
  string name = 2;
  repeated string participant_ids = 3;
  string type = 4;
  int64 created_at = 5;
}

message ListUserGroupsRequest {
  string user_id = 1;
  int32 limit = 2;
  int64 offset = 3;
}

message ListUserGroupsResponse {
  repeated GroupInfo groups = 1;
  Pagination pagination = 2;
}

message GroupInfo {
  string group_id = 1;
  string name = 2;
  int32 participant_count = 3;
  string type = 4;
  int64 last_message_timestamp = 5;
}

message AddParticipantRequest {
  string group_id = 1;
  string user_id = 2;
}

message AddParticipantResponse {
  bool success = 1;
  string message = 2;
}

message RemoveParticipantRequest {
  string group_id = 1;
  string user_id = 2;
}

message RemoveParticipantResponse {
  bool success = 1;
  string message = 2;
}
